[package]
name = "sciport-rs"
version = "0.0.2"
edition = "2021"
description = "Rust port of scipy"
authors = ["Christian Belloni"]
readme = "README.md"
license = "MIT"
keywords = ["math", "science", "filter", "dsp"]
categories = ["mathematics", "science", "algorithms"]
homepage = "https://github.com/ChristianBelloni/sciport-rs"
repository = "https://github.com/ChristianBelloni/sciport-rs"

[dependencies]
num = "0.4.0"
complex-bessel-rs = { version = "0.0.5" }
#complex-bessel-rs = { path = "../complex-bessel-rs" }
ndarray = { version = "0.15.6", features = ["rayon"] }
numpy = "0.19.0"
[dev-dependencies]
pyo3 = { version = "0.19.1", features = ["full", "auto-initialize"] }
ndarray = { version = "0.15.6", features = ["rayon", "approx-0_5"] }
rand = "0.8.5"
approx = "0.5"
lazy_static = "1.4.0"
# blas-src = { version = "0.8.0", default-features = false, features = ["accelerate"] }


[features]
#"blas" = ["ndarray/blas"]

