[package]
name = "sciport-rs"
version = "0.0.3"
edition = "2021"
description = "Rust port of scipy"
authors = ["Christian Belloni"]
readme = "README.md"
license = "MIT"
keywords = ["math", "science", "filter", "dsp"]
categories = ["mathematics", "science", "algorithms"]
homepage = "https://github.com/ChristianBelloni/sciport-rs"
repository = "https://github.com/ChristianBelloni/sciport-rs"

[dependencies]
num = "0.4"
complex-bessel-rs = { version = "0.0.5" }
ndarray = { version = "0.15.6", features = ["rayon"] }
itertools = "0.12.0"
nalgebra = "0.32.3"
approx = { version = "0.5", features = ["num-complex"] }
thiserror = { version = "1.0" }
#blas-src = { version = "0.9.0", default-features = false, features = ["accelerate"], optional = true }

[dev-dependencies]
pyo3 = { version = "0.20.0", features = ["full", "auto-initialize"] }
numpy = "0.20.0"
ndarray = { version = "0.15.6", features = ["rayon", "approx-0_5"] }
ndarray-rand = "0.14"
rand = "0.8.5"
lazy_static = "1.4.0"
# 


#[features]
#"blas" = ["ndarray/blas", "dep:blas-src"]

